# GI

./: CMakeLists.txt  Conana config  compile_commands.json  conanfile.txt  run.sh
conan/: conanbuildinfo.cmake  conanbuildinfo.txt  conaninfo.txt  graph_info.json
includes/: BitsE.h  CommonE.h  Core.h  CoreE.h  DebugE.h  Declarations.h  DeclarationsE.h  GData.h  MainE.h  PieceE.h  SquareE.h  main.h
src/: BitsE.cpp  Core.cpp  CoreE.cpp  DebugE.cpp  DeclarationsE.cpp  MainE.cpp  PieceE.cpp  main.cpp
